--- a/PrzewodnikTurystyczny/res/layout/activity_mapa.xml
+++ b/PrzewodnikTurystyczny/res/layout/activity_mapa.xml
@@ -11,6 +11,21 @@
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-    <!-- współrzędne Warszawy -->
+
+    <ProgressBar
+        android:id="@+id/progress_adres"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:indeterminate="true"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/tv_adres"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/demo_str" />
 
 </RelativeLayout>
