--- a/PrzewodnikTurystyczny/res/layout/activity_mapa.xml
+++ b/PrzewodnikTurystyczny/res/layout/activity_mapa.xml
@@ -28,4 +28,30 @@
         android:layout_centerHorizontal="true"
         android:text="@string/demo_str" />
 
+    <TextView
+        android:id="@+id/tv_lokalizacja"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="22dp"
+        android:text="@string/demo_str" />
+
+    <EditText
+        android:id="@+id/et_podaj_adres"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:ems="10"
+        android:hint="@string/et_podaj_adres" />
+
+    <Button
+        android:id="@+id/btn_znajdz"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/btn_znajdz" />
+
 </RelativeLayout>
