--- a/PrzewodnikTurystyczny/res/layout/custom_info_window_map.xml
+++ b/PrzewodnikTurystyczny/res/layout/custom_info_window_map.xml
@@ -9,15 +9,15 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <ImageView
+            android:id="@+id/wp_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:adjustViewBounds="true"
-            android:src="@drawable/ic_launcher"
             android:contentDescription="@string/content_desc1"/>
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/wp_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/demo_str"
@@ -25,7 +25,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/snippet"
+            android:id="@+id/wp_snippet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/demo_str"
