Metoda automatycznie pobierająca współrzędne budynku mając jego adres z bazy. Współrzędne wprowadzane są do bazy.
Usunięcie SugarORM-a z zależności projektu i uporządkowanie części
importów.

CLOSED - task 24: Funkcja automatycznie dodająca współrzędne do obiektów
w bazie. 
http://github.com/blazej3k/dupcia/issues/issue/24

--- a/PrzewodnikTurystyczny/res/layout/activity_main.xml
+++ b/PrzewodnikTurystyczny/res/layout/activity_main.xml
@@ -57,6 +57,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn_czysc_branze" />
+
+        <Button
+            android:id="@+id/btn_czysc_budynki"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_czysc_budynki" />
+
     </LinearLayout>
 
     <Button
@@ -76,11 +83,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pompeczka_rozne" />
-
-    <Button
-        android:id="@+id/btn_wolny"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/demo_str" />
 
 </LinearLayout>
