--- a/PrzewodnikTurystyczny/res/values/styles.xml
+++ b/PrzewodnikTurystyczny/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -15,6 +15,14 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
+    
+    <style name="button_brzydki">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">20dp</item>
+		<item name="android:textSize">@dimen/button_brzydki</item>
+		<item name="android:textColor">@color/czarny</item>
     </style>
 
 </resources>
