OPEN - task 36: Wprowadzić więcej RELACJI. http://github.com/blazej3k/dupcia/issues/issue/36

--- a/PrzewodnikTurystyczny/res/layout/activity_main.xml
+++ b/PrzewodnikTurystyczny/res/layout/activity_main.xml
@@ -129,9 +129,9 @@
         android:gravity="center" >
 
         <Button
-            android:id="@+id/btn_relacje_miej_wyd"
+            android:id="@+id/btn_relacje"
             style="@style/button_brzydki"
-            android:text="@string/btn_relacje_miej_wyd" />
+            android:text="@string/btn_relacje" />
         
         <Button
             android:id="@+id/btn_relacje_x"
