--- a/PrzewodnikTurystyczny/res/values/styles.xml
+++ b/PrzewodnikTurystyczny/res/values/styles.xml
@@ -25,4 +25,48 @@
 		<item name="android:textColor">@color/czarny</item>
     </style>
 
+    <style name="kreska_pozioma">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">10dp</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:background">@color/bordowy</item>
+    </style>
+    
+    <style name="lay_dialog_szczegoly">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">fill_parent</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:gravity">left</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+    <!-- dodać do niego background i jakas rameczke cienka -->
+    
+    <style name="tv_dialog_nazwa">
+		<item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:text">@string/demo_str</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    
+    <style name="tv_dialog_pola">
+		<item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:text">@string/demo_str</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:visibility">gone</item>
+    </style>
+    
+    <style name="tv_dialog_opis">
+		<item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:text">@string/demo_str</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:visibility">gone</item>
+    </style>
+    <!-- dodać do niego background i jakas rameczke cienka -->
 </resources>
