--- a/PrzewodnikTurystyczny/res/values/styles.xml
+++ b/PrzewodnikTurystyczny/res/values/styles.xml
@@ -35,21 +35,26 @@
     
     <style name="lay_dialog_szczegoly">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">fill_parent</item>
-        <item name="android:layout_marginLeft">10dp</item>
-        <item name="android:layout_marginRight">10dp</item>
-        <item name="android:layout_marginTop">10dp</item>
-        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_height">match_parent</item>
+		<item name="android:paddingTop">10dp</item>
+		<item name="android:paddingBottom">10dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
         <item name="android:gravity">left</item>
         <item name="android:orientation">vertical</item>
     </style>
-    <!-- dodać do niego background i jakas rameczke cienka -->
+    <!-- dodać do niego background i jakas rameczke cienka, 
+    
+            <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:layout_marginBottom">20dp</item> -->
     
     <style name="tv_dialog_nazwa">
 		<item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:text">@string/demo_str</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
     </style>
     
@@ -57,7 +62,17 @@
 		<item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:text">@string/demo_str</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:visibility">gone</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+    
+    <style name="lbl_dialog_pola">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:visibility">gone</item>
     </style>
     
