Filtrowanie obiektów w widoku Kategorii, żeby zawężało po okresie. Wyświetlanie co zostało wybrane, jaki okres i kategoria.

--- a/PrzewodnikTurystyczny/res/layout/cust_row_ex_lista.xml
+++ b/PrzewodnikTurystyczny/res/layout/cust_row_ex_lista.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/tv_row_obiekt"
-		style="@style/cust_row" />
+		style="@style/cust_row_begin" />
 
     <View
         android:layout_width="match_parent"
