--- a/PrzewodnikTurystyczny/res/values/styles.xml
+++ b/PrzewodnikTurystyczny/res/values/styles.xml
@@ -85,7 +85,7 @@
     </style>
     <!-- dodać do niego background i jakas rameczke cienka -->
     
-    <style name="cust_row">
+    <style name="cust_row_begin">
 		<item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:drawableLeft">@drawable/zolty</item>
@@ -94,6 +94,19 @@
         <item name="android:text">@string/demo_str</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:layout_weight">8</item>
+    </style>
+    
+    <style name="cust_row_end">
+		<item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:drawablePadding">5dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:text">@string/demo_str</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">italic</item>
+        <item name="android:layout_weight">2</item>
+        <item name="android:visibility">gone</item>
     </style>
     
     <style name="lista_kategorie">
